SERVER-9061 Fix mongostat segfault when using auth with multiple hosts